--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -181,25 +181,7 @@ Add clicksend.com mobile text messaging support
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Add full redhat support for auto-installer.
-
-
-Add IMX / ZEUS to demo assets
-
-
-Add hours / minutes to price alerts and the price target plugin.
-
-
-When a price alert / chart config INTERFACE save fails due to no market data found, add a note to the error message in the interface that the market may be down temporarily for maintenance, OR permanently removed, and they should manually check by visiting the exchange website.
-
-
-Add in the external apis section, the option to change the solana RPC server, with default being the one at solana.com. Add a validity check, using a basic / simple RPC endpoint.
-
-
-Webhooks show "file not found" when entering forward slash delimited parameters, on both desktop editions.
-
-
-Put the curl temp cookie file in /cache/other, for windows compatibility?
+Move the Etherscan API key config into the address balance tracker plugin.
 
 
 Setup XAMPP on Win10 on the NUC, and run server edition of tracker on it for a week with PHP debug logging on. Write notes in TODO.txt debugging section, on setting up / viewing PHP error logging in XAMPP on Windows.
@@ -215,6 +197,9 @@ Cointelegraph news feed works fine in any brand new desktop edition install, yet
 
 
 On windows desktop edition, when registering an admin account for the first time, if you click on certain links in the user area menu, it just hangs with a loading message, and never redirects back to the registration page like it should.
+
+
+Add full redhat support for auto-installer.
 
 
 We should not "default to" a text input in the admin area, as submitting updated data could corrupt certain settings under these circumstances. We should default to <input type='hidden' />, BUT ALSO INCLUDE a large bright red span, saying that field name isn't properly configured for the interface. That way we still never miss a setting by accident, and if it shows on the page, it should also DISABLE SUBMITTING THE FORM DATA.
