--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5754,7 +5754,7 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -BUG FIX (only for #LINUX# Desktop Edition): Updated custom PHP binary for compatibility with Ubuntu 22.xx
 
--Automated script for automatically building the PHP CGI binary for LINUX Desktop Edition ("BUILD-PHP-FOR-LINUX-DESKTOP.bash" in main folder, see Help / TROUBLESHOOTING.txt on usage and instructions)
+-Automated script for automatically building the PHP CGI binary for LINUX Desktop Edition ("FIX-LINUX-DESKTOP.bash" in main folder, see Help / TROUBLESHOOTING.txt on usage and instructions)
 
 -Documentation on troubleshooting LINUX Desktop Edition startup issues
 
@@ -6672,6 +6672,47 @@ AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.
 -Refactored the attack signature scanning on user inputs, so it STILL maintains strict checks, BUT now has significantly less false positives, when checking POSSIBLE hexidecimal encoding (on VALID hex inputs)  
 
 -Miscellaneous user experience improvements
+
+IMPORTANT *UPGRADE* NOTICES:
+
+v6.00.33 and higher changed a few duplicate text gateway keys, so if you use
+email-to-text gateways in this app, MAKE SURE YOURS STILL HAS THE SAME NAME.
+
+v6.00.32 and higher COMPLETELY RESTRUCTURES THE PLUGIN CONFIGURATION FORMAT. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
+FOR *ALL* BUNDLED PLUGINS, AND MIGRATE ANY CUSTOM PLUGIN CONFIGS TO THE NEW FORMAT (see revised plugin developer documentation).
+
+v6.00.32 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
+
+-v6.00.32 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.31 OR LOWER.
+
+v6.00.31 and higher restructures the mobile text gateways config formatting. USE THE LATEST/UPGRADED CONFIG.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM GATEWAYS TO THE NEW FORMAT.
+
+v6.00.31 and higher restructures the price alerts / price charts config formatting. USE THE LATEST/UPGRADED CONFIG.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM PRICE ALERTS / PRICE CHARTS TO THE NEW FORMAT.
+
+v6.00.29 and higher restructures the 'price-target-alert' plugin. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.
+
+-------------------------------------------------------------------
+
+
+
+-------------------------------------------------------------------
+6.00.37:
+
+-BUG FIX: Fixed the automated script (FIX-LINUX-DESKTOP.bash, located in main app directory) that repairs Linux Desktop Edition installations (runs multiple compatibility fixes, for Debian and RedHat distros)
+
+-Detection / (optional) fixing of low swap space on debian-based devices in ALL bash auto installer / fixer scripts (so running a desktop interface doesn't use all the system memory on low memory devices)
+
+-Better Linux support in all auto install / fix scripts
+
+-Miscellaneous user experience improvements / optimizations
+
+-Refactored all bash scripts, for improved user experience
+
+-Optimizations for installation on low memory devices
 
 IMPORTANT *UPGRADE* NOTICES:
 
