fixes, added Currency Support admin interface
fixes, added Currency Support admin interface

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -181,6 +181,9 @@ Add clicksend.com mobile text messaging support
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+Add input validation to the new section: Currency Support
+
+
 Update screenshots, since we overhauled everything in the interface.
 
 
