--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -181,6 +181,9 @@ Add clicksend.com mobile text messaging support
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+Add input validation to the new section: Currency Support
+
+
 Update screenshots, since we overhauled everything in the interface.
 
 
@@ -268,7 +271,7 @@ Change the last option in the ext_data() function to a human-readable value, to 
 Add remote IP address data to ALL relevant security error logging everywhere in the app.
 
 
-Create documentation for exposing plugin settings into it's admin interface.
+Create documentation for exposing plugin settings into it's admin interface (to add to step 14 in the plugin development documentation).
 
 
 Add new plugin standard config 'ui_display_mode':
