Increased reliability of CURL (in PHP) for API data requests
Increased reliability of CURL (in PHP) for API data requests

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -72,7 +72,7 @@ GENERAL REMINDERS
 ===> Reload / refresh browser : Shift + F5 (Mac: Command + R)
 ===> Open devtools : F12 (Mac: Fn + F12)
 !!!!
-===> Occasionally update cacert.pem in the main directory (for Windows Desktop Edition):
+===> Occasionally update cacert.pem in the main directory:
 ===> https://curl.se/ca/cacert.pem
 !!!!
 ===> "developer-config.php" contains MANY MANY MANY developer-only configs!
