refactoring, created 'access stats' admin section, better UX on user are save button, fixes
refactoring, created 'access stats' admin section, better UX on user are save button, fixes

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6751,7 +6751,7 @@ AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.
 
 -BUG FIX: Miscellaneous fixes
 
--Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Currency Support, Power User
+-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Currency Support, Power User, Access Stats
 
 -Converted the old ETH ICOs config to a generalized presale tokens config, and moved to the new admin section CURRENCY SUPPORT
 
@@ -6760,6 +6760,8 @@ AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.
 -Miscellaneous user experience improvements / optimizations / refactoring
 
 -Increased reliability of CURL (in PHP) for API data requests
+
+-Made API throttling more reliable
 
 -Updated documentation
 
